<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="schemas.android.com/tools"
    tools:context="com.app_software.chromisstock.ProductListActivity"
    xmlns:chromisstock="http://schemas.android.com/apk/res-auto"
    >

    <item android:id="@+id/product_search"
        android:title="@string/menu_search"
        android:icon="@mipmap/ic_search_black_24dp"
        chromisstock:showAsAction="collapseActionView|ifRoom"
        chromisstock:actionViewClass="android.support.v7.widget.SearchView"
        >
    </item>
    <item android:id="@+id/use_scanner"
        android:title="@string/menu_use_scanner"
        chromisstock:showAsAction="ifRoom"
        android:icon="@mipmap/ic_barcode" >
    </item>

    <item android:id="@+id/new_product"
        android:title="@string/menu_new_product"
        android:icon="@mipmap/ic_system_update_alt_black_24dp" >
    </item>

    <item android:id="@+id/fetch_products"
        android:title="@string/menu_fetch_products"
        android:icon="@mipmap/ic_system_update_alt_black_24dp" >
    </item>

    <item android:id="@+id/send_updates"
        android:title="@string/menu_send_updates"
        android:icon="@mipmap/ic_autorenew_black_24dp" >
    </item>

    <item android:id="@+id/discard_updates"
        android:title="@string/menu_discard_updates"
        android:icon="@mipmap/ic_autorenew_black_24dp" >
    </item>

    <item android:id="@+id/settings"
        android:title="@string/menu_settings"
        android:icon="@mipmap/ic_settings_black_24dp" >
    </item>

    <item android:id="@+id/about"
        android:title="@string/menu_about"
        android:icon="@mipmap/ic_settings_black_24dp" >
    </item>

</menu>