<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.app_software.chromisstock.chromisstock.StockChangeDialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Product"
        android:id="@+id/txtProductName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Field"
        android:id="@+id/txtField"
        android:layout_below="@+id/txtProductName"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/txtProductName" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtField"
        android:layout_alignParentStart="true"
        android:id="@+id/radiogroup" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_increase_by"
            android:id="@+id/rbIncrease"
            android:layout_alignParentStart="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_decrease_by"
            android:id="@+id/rbDecrease"
            android:layout_below="@+id/rbIncrease"
            android:layout_alignParentStart="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_set_value"
            android:id="@+id/rbSetValue"
            android:layout_below="@+id/rbDecrease"
            android:layout_alignParentStart="true"
            />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editNewValue"
        android:layout_below="@+id/radiogroup"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/txtField"
        android:editable="true"
        android:enabled="true"
        android:focusable="true" />

</RelativeLayout>
